generals and multilanguage

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -15,9 +15,9 @@
 @tailwind utilities;
 
 /*fuentes DESCARGADAS*/
-:root {
+/* :root {
   --font-axiforma: Axiforma;
-}
+} */
 /*fuentes DESCARGADAS*/
 
 html {
