--- a/app/styles/molecules/MiddleCard.css
+++ b/app/styles/molecules/MiddleCard.css
@@ -1,34 +1,21 @@
 .middleCard {
-  @apply relative overflow-hidden;
+  @apply relative overflow-hidden flex flex-col items-center;
   border-radius: 5px;
   background-size: cover;
-  height: calc(22.8rem * var(--scale));
 
-  &::before {
-    content: "";
-    z-index: 1;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: linear-gradient(
-      180deg,
-      rgba(80, 148, 21, 0.97) 10.21%,
-      rgba(80, 148, 21, 0.32) 38.33%,
-      rgba(80, 148, 21, 0) 68.54%
-    );
-    mix-blend-mode: multiply;
-  }
 
   &__thumb {
-    @apply w-full h-full absolute;
-
-    object-fit: cover;
+    @apply flex items-center justify-center;
+    width:8rem;
+    height:6rem;
+    img{
+    @apply w-[80%] h-[80%] ;
+    object-fit: contain;
+    }
   }
 
   &__title {
-    @apply block mx-7 mt-5 text-white font-[400] text-[1.6rem] absolute;
+    @apply block mx-7 text-primary font-[600] text-[1.7rem] ;
     z-index: 10;
   }
 
