locale y curso section add

--- a/app/styles/atoms/SectionTitle.css
+++ b/app/styles/atoms/SectionTitle.css
@@ -18,7 +18,7 @@
       position: absolute;
       content: "";
       width: 7.6rem;
-      background: linear-gradient(90deg, #509415 50%, #093f51 50%);
+      background: linear-gradient(90deg, #ffc107 50%, #00317f 50%);
       bottom: -1.5rem;
       height: 0.2rem;
       left: 50%;
