--- a/app/styles/organisms/index.css
+++ b/app/styles/organisms/index.css
@@ -1,6 +1,6 @@
 @import "HomeBanner.css";
 @import "HomeWeDo.css";
-@import "HomeManufactures.css";
+@import "HomeCurso.css";
 @import "HomeServices.css";
 @import "HomeMiddle.css";
 @import "HomeChoose.css";
