--- a/app/styles/molecules/index.css
+++ b/app/styles/molecules/index.css
@@ -2,7 +2,7 @@
 @import "SkillCard";
 @import "ServiceCard.css";
 @import "MiddleCard.css";
-@import "ChooseCard.css";
+@import "CursoCard.css";
 @import "BreadCumb.css";
 @import "BlogCards.css";
 @import "BlogCardOne.css";
