--- a/app/styles/organisms/HomeAbout.css
+++ b/app/styles/organisms/HomeAbout.css
@@ -2,7 +2,11 @@
   @apply bg-white pt-[5rem] pb-[4rem];
 
   &__thumb {
-    @apply hidden;
+    @apply relative h-[50rem] w-[90%] mx-auto;
+
+    img {
+      @apply absolute w-full h-full object-contain;
+    }
   }
   &__description {
     @apply w-[90%] text-[1.5rem] mx-auto text-center;
@@ -45,7 +49,7 @@
       }
 
       &:before {
-        @apply bg-secundary;
+        @apply bg-primary;
         content: "";
         position: absolute;
         bottom: 0;
