--- a/app/styles/molecules/index.css
+++ b/app/styles/molecules/index.css
@@ -3,9 +3,8 @@
 @import "ServiceCard.css";
 @import "MiddleCard.css";
 @import "CursoCard.css";
+@import "InstructorCard.css";
 @import "BreadCumb.css";
-@import "BlogCards.css";
-@import "BlogCardOne.css";
 @import "ContactForm.css";
 @import "ContactCards.css";
 @import "Modal.css";
