--- a/app/styles/organisms/index.css
+++ b/app/styles/organisms/index.css
@@ -3,7 +3,7 @@
 @import "HomeCurso.css";
 @import "HomeServices.css";
 @import "HomeMiddle.css";
-@import "HomeChoose.css";
+@import "HomeInstructores.css";
 @import "HomeProjects.css";
 @import "HomeAbout.css";
 @import "HomeBlog.css";
